--- a/Librerias/materialize/css/materialize.css
+++ b/Librerias/materialize/css/materialize.css
@@ -5581,9 +5581,9 @@ button.btn-floating {
   right: 0;
   background-color: #fafafa;
   padding: 0;
-  max-height: 80%;
-
-  width: 85% !important;
+  height: 90%;
+  max-height: 100%;
+  width: 70% !important;
   margin: auto;
   overflow-y: auto;
   border-radius: 2px;
