--- a/Librerias/materialize/css/materialize.css
+++ b/Librerias/materialize/css/materialize.css
@@ -5581,9 +5581,8 @@ button.btn-floating {
   right: 0;
   background-color: #fafafa;
   padding: 0;
-  height: 90%;
-  max-height: 85%;
-  width: 70% !important;
+  max-height: 80%;
+  width: 55%;
   margin: auto;
   overflow-y: auto;
   border-radius: 2px;
